--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,24 @@
         min-height: 100vh;
       }
     </style>
+
+    <!-- Local font-face rules for Montserrat (loaded from public/assets/fonts) -->
+    <style>
+      @font-face {
+        font-family: 'MontserratLocal';
+        src: url('/assets/fonts/Montserrat-Regular.ttf') format('truetype');
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+      }
+      @font-face {
+        font-family: 'MontserratLocal';
+        src: url('/assets/fonts/Montserrat-Bold.ttf') format('truetype');
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
